fix ballon z-index.

--- a/assets/index.css
+++ b/assets/index.css
@@ -183,7 +183,7 @@ body{
     transition: all .5s;
     visibility: hidden;
     opacity: 0;
-    z-index: 1;
+    z-index: 3;
 }
 
 .menu ul {
